# spatialos-sdk-rs

./: README.md
cargo-spatial/src/: codegen.rs  local.rs  main.rs
project-example/: Cargo.toml  build.rs  rust_worker.json
project-example/schema/: command_data.schema  example.schema  subpackage.schema
project-example/src/: connection_handler.rs  generated.rs  main.rs  opt.rs
schema_tests/: bundle.json
schema_tests/ast/improbable/: standard_library.json  standard_library.rs
spatialos-sdk/: Cargo.toml  Spatial.toml  build.rs  bundle.json
spatialos-sdk-code-generator/: Cargo.toml
spatialos-sdk-code-generator/data/: bundle.json
spatialos-sdk-code-generator/examples/: test_bundle.rs
spatialos-sdk-code-generator/src/: generator.rs  lib.rs  schema_bundle.rs
spatialos-sdk-code-generator/src/schema_bundle/: quotable.rs
spatialos-sdk-code-generator/tests/: test.rs
spatialos-sdk/src/: lib.rs
spatialos-sdk/src/worker/: commands.rs  component.rs  entity.rs  op.rs  schema.rs
spatialos-sdk/src/worker/schema/: command_request.rs  command_response.rs  object.rs
spatialos-sdk/tests/: manual_serialization.rs
