[package]
name = "spatialos-sdk-code-generator"
version = "0.1.0"
authors = ["David Avedissian <git@dga.me.uk>"]
edition = "2018"

[dependencies]
heck = "0.3.1"
proc-macro2 = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
t4rust-derive = { git = "https://github.com/ReSpeak/t4rust" }
quote = "0.6.11"
syn = "0.15.26"

[lib]
name = "spatialos_sdk_code_generator"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/bin.rs"
