[package]
name = "spatialos-sdk-code-generator"
version = "0.1.0"
authors = ["David Avedissian <git@dga.me.uk>"]
edition = "2018"

[dependencies]
heck = "0.3.1"
proc-macro2 = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
t4rust-derive = { git = "https://github.com/ReSpeak/t4rust" }
proc-quote = "0.2.0"
syn = "0.15.26"
